// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot with largeViewport 1`] = `
<Headroom
  height={180}
  onStickyTopChanged={[Function]}
  parent={
    <html>
      <head />
      <body />
    </html>
  }
  pinStart={0}
  positionStickyDisabled={false}
  scrollHeight={90}
  zIndex={1}
>
  <Header__HeaderContainer>
    <Header__Row
      hasTitle={false}
    >
      <HeaderLogo
        alt="IntegreatTestCms"
        link="/random_route"
        src="/app-logo.png"
      />
      <HeaderTitle />
      <Header__ActionBar>
        <HeaderActionItemLink
          href="/random_route"
          iconSrc="icon"
          key="0"
          text="text"
        />
      </Header__ActionBar>
    </Header__Row>
    <Header__Row>
      <Header__NavigationBar>
        <HeaderNavigationItem
          active={true}
          href="/another_route"
          icon="icon.jpg"
          key="0"
          text="text1"
          tooltip="tooltip1"
        />
      </Header__NavigationBar>
    </Header__Row>
  </Header__HeaderContainer>
</Headroom>
`;

exports[`Header should match snapshot with smallViewport 1`] = `
<Headroom
  height={140}
  onStickyTopChanged={[Function]}
  parent={
    <html>
      <head />
      <body />
    </html>
  }
  pinStart={0}
  positionStickyDisabled={false}
  scrollHeight={70}
  zIndex={1}
>
  <Header__HeaderContainer>
    <Header__Row
      hasTitle={false}
    >
      <HeaderLogo
        alt="IntegreatTestCms"
        link="/random_route"
        src="/app-logo.png"
      />
      <Header__ActionBar>
        <HeaderActionItemLink
          href="/random_route"
          iconSrc="/icon.jpg"
          key="0"
          text="random route"
        />
      </Header__ActionBar>
    </Header__Row>
    <Header__Row>
      <Header__NavigationBar>
        <HeaderNavigationItem
          active={true}
          href="/another_route"
          icon="icon.jpg"
          key="0"
          text="text1"
          tooltip="tooltip1"
        />
      </Header__NavigationBar>
    </Header__Row>
  </Header__HeaderContainer>
</Headroom>
`;
